[톰캣 구현하기 - 2,4단계] 수달(허수진) 미션 제출합니다. (#265)
* docs: 2단계 요구사항 도출

* fix: 잘못된 CRLF 수정

* feat: Parser 에 대한 test 코드 및 방어 로직 추가

* feat: 회원 가입 로직 추가

* feat: 쿠키 설정 기능 추가

* feat: 세션 설정 기능 추가

* feat: Executors로 Thread Pool 적용

* feat: register 시 쿠키 설정

* refactor: 불필요한 log 제거

* fix : 파일 리더시 깨지는 문제 수정

* refactor: servlet 도입 + Login 검증 로직 filter 로 이전

* refactor: 코드 컨벤션 적용

* refactor: ExceptionType 처리

* refactor: cookie 에 대한 방어로직 추가

* refactor: 빈 맵 반환시 emptyMap() 로 변경

* refactor: 회원 가입시 방어로직 추가

* refactor: 회원 가입시 null 반환 로직 제거

* refactor: controller 싱글톤으로 변환

* docs: 리팩터링 요구사항 도출

* refactor: controller Mapping 로직 개선

* refactor: cookie login filter 처리 로직 개선

* refactor: doPost doGet 방식으로 handle 처리

* refactor: response create 로직 개편

* refactor: os별 공백문자 지원 가능하게 변경

* refactor: Parser 중복 로직 추출

* refactor: OS 개행 상수 네이밍 변경

* refactor: HttpHeader null 반환

* refactor: 디버깅에 사용된 메서드 제거

* refactor: code review 반영